<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Deck Wallet</string>
    <string name="suit">Suit</string>
    <string name="rank">Rank</string>
    <string name="password_optional">Password (optional)</string>
    <string name="password_confirm">Confirm password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="select_suit_rank">Select both the rank and the suit</string>
    <string name="select_unique_card">Select a unique card</string>
    <string name="repeated_card">Repeated card</string>
    <string name="repeated_card_message">This card has been registered as #%1$d. Do you want to update that card or stay here?</string>
    <string name="go_card">Go to Card %1$d</string>
    <string name="stay_here">Stay here</string>
    <string name="go">Go!</string>
    <string name="qr_code">QR Code</string>
    <string name="password_missmatch">Passwords do not match!</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="address">Address</string>
    <string name="addresses">Addresses</string>
    <string name="private_key">Private key</string>
    <string name="no_wallet">No compatible wallet was found</string>
    <string name="help">Help</string>
    <string name="check">Check</string>
    <string name="check_ok">Check succeeded</string>
    <string name="check_ko">Check failed!</string>
    <string name="check_confirm">Do you want to clear this information? You will be asked to enter it again to double check the generated wallet.</string>
    <string name="clear">Clear</string>
    <string name="clear_confirm">Do you want to clear all the entered information?</string>
    <string name="donate">Donate</string>
    <string name="rate">Rate this app</string>
    <string name="donate_copied">Donation address has been copied to clipboard</string>
    <string name="reenter_check">Re-enter the same card order and password</string>
    <string name="last_seed_match">The generated wallet matches the previous one</string>
    <string name="last_seed_missmatch">The generated wallet does NOT match the previous one</string>
    <string name="share_addresses">Share addresses</string>
    <string name="generating_addresses">Generating addresses&#8230;</string>
    <string name="not_generate_address">Could not generate a valid address</string>
    <string name="cards">Cards</string>
    <string name="number_cards">Number of cards</string>
    <string name="change_number">Change number of cards</string>
    <string name="change_number_reset">All the entered data must be cleared in order to change the number of cards. Do you want to continue?</string>

    <string-array name="card_options">
        <item>52</item>
        <item>51</item>
        <item>50</item>
        <item>49</item>
        <item>48</item>
        <item>47</item>
        <item>46</item>
        <item>45</item>
        <item>44</item>
        <item>43</item>
        <item>42</item>
        <item>41</item>
        <item>40</item>
        <item>39</item>
        <item>38</item>
        <item>37</item>
        <item>36</item>
        <item>35</item>
        <item>34</item>
        <item>33</item>
        <item>32</item>
        <item>31</item>
    </string-array>

</resources>