<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ecuamobi.deckwallet.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_cards" />

            <Spinner
                android:id="@+id/spin_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/card_options"
                android:prompt="@string/number_cards" />
        </LinearLayout>

        <TextView
            android:id="@+id/password_enabler"
            style="@style/MyEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_optional"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:visibility="gone" />

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:visibility="gone" />

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_cards"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="12dp" />

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_addresses"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="12dp" />
    </LinearLayout>

</ScrollView>