<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/ic_light_border" >

    <TextView
        android:id="@+id/id_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:background="@drawable/ic_red_border"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view_center"
        android:layout_width="14dp"
        android:layout_height="1dp"
        android:layout_below="@id/id_number"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="135dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/id_number"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/view_center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_address"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/qr_code"
            android:src="@drawable/qr" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="fill_parent"
            android:layout_height="95dp"
            android:gravity="center_horizontal"
            android:maxLines="5"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="135dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/id_number"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/view_center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_key"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/qr_code"
            android:src="@drawable/qr" />

        <TextView
            android:id="@+id/txt_key"
            android:layout_width="fill_parent"
            android:layout_height="95dp"
            android:gravity="center_horizontal"
            android:maxLines="5"
            android:text="@string/private_key"
            android:textColor="@android:color/darker_gray"
            android:textIsSelectable="true"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>